vc2-salesforce-version/force-app/main/default/objects/State_Economy__c/fields/Economy_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Economy_Analysis__c</fullName>
    <label>Economy Analysis</label>
    <type>MasterDetail</type>
    <referenceTo>Economy_Analysis__c</referenceTo>
    <relationshipName>State_Economies</relationshipName>
</CustomField>