vc2-salesforce-version/force-app/main/default/objects/State_Economy__c/fields/Factory_Profit__c.field-meta.xml
<CustomField>
    <fullName>Factory_Profit__c</fullName>
    <label>Factory Profit (£)</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>