vc2-salesforce-version/force-app/main/default/objects/State_Economy__c/fields/FGDP__c.field-meta.xml
<CustomField>
    <fullName>FGDP__c</fullName>
    <label>FGDP (£)</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>