vc2-salesforce-version/force-app/main/default/objects/State_Economy__c/fields/GDP__c.field-meta.xml
<CustomField>
    <fullName>GDP__c</fullName>
    <label>GDP (£)</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>