vc2-salesforce-version/force-app/main/default/objects/State_Economy__c/fields/PGDP__c.field-meta.xml
<CustomField>
    <fullName>PGDP__c</fullName>
    <label>PGDP (£)</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>