vc2-salesforce-version/force-app/main/default/objects/State_Economy__c/fields/Population__c.field-meta.xml
<CustomField>
    <fullName>Population__c</fullName>
    <label>Population</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>