vc2-salesforce-version/force-app/main/default/objects/State_Economy__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Lookup</type>
    <referenceTo>State__c</referenceTo>
    <relationshipName>State_Economies</relationshipName>
    <required>true</required>
    <indexLookup>true</indexLookup>
</CustomField>